microservices/deploy/service-mesh/istio/traffic/virtual-service-testing.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: review-route
spec:
  hosts:
  - review-service.default.svc.cluster.local
  http:
  - match:
    - uri:
        prefix: "/test-v1"
    route:
    - destination:
        host: review-service
        subset: v1
