microservices/deploy/service-mesh/istio/traffic/virtual-service.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: review-route
spec:
  hosts:
  - review-service.default.svc.cluster.local
  http:
  - route:
    - destination:
        host: review-service
        subset: v1
      weight: 80
    - destination:
        host: review-service
        subset: v3
      weight: 20
